--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,9 @@
-sudo: required
-dist: trusty
-
 language: node_js
 node_js:
-  - "6"
-
-before_install:
-  - npm i -g npm
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - "4"
+before_script:
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-
-cache:
-  directories:
-    - "node_modules"
