Use firefox for test

--- a/package.json
+++ b/package.json
@@ -4,16 +4,10 @@
   "version": "1.0.0",
   "description": "Rich inline or toolbar text editing",
   "scripts": {
-    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
-    "emit": "tsc",
-    "pretest": "tsc && npm run lint && grunt release",
-    "test": "karma start --single-run --codeCoverage && node tests/remap.js",
+    "pretest": "tsc && lint",
+    "test": "karma start  --browsers Firefox --single-run --codeCoverage && node tests/remap.js",
     "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'"
   },
-  "pre-commit": [
-    "emit",
-    "lint"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/mendixlabs/rich-text"
