--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
-  - "4"
+  - "6"
+
+before_install:
+  - npm i -g npm@5
+
 before_script:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
