--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
+sudo: required
+dist: trusty
 language: node_js
 node_js:
-  - "4"
+  - '4.2'
+
+addons:
+apt:
+  sources:
+    - google-chrome
+  packages:
+    - google-chrome-stable
+    - google-chrome-beta
 
 before_install:
   - npm i -g npm@5
-
-before_script:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
