--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,13 @@ dist: trusty
 
 language: node_js
 node_js:
-  - '4.2'
-
-addons:
-apt:
-  sources:
-    - google-chrome
-  packages:
-    - google-chrome-stable
-    - google-chrome-beta
+  - "6"
 
 before_install:
   - npm i -g npm@5
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
