--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0",
   "description": "Rich inline or toolbar text editing",
   "scripts": {
-    "pretest": "tsc && npm run lint",
+    "pretest": "tsc && npm run lint && grunt release",
     "test": "karma start --single-run --codeCoverage && node tests/remap.js",
-    "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'"
+    "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'",
+    "build": "grunt release",
+    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt"
   },
   "repository": {
     "type": "git",
@@ -55,6 +57,7 @@
     "karma-webpack": "^2.0.4",
     "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.1.0.tar.gz",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
