--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - sudo apt-get -qq update
+  - sudo apt-get install -y subversion
+  - svn --version
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
