--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "karma start --single-run --codeCoverage && node tests/remap.js",
     "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'",
     "build": "grunt release",
-    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt"
+    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
+    "updateProject": "ts-node -P tests/scripts/tsconfig.json tests/scripts/UpdateMxProject.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "@types/enzyme": "^2.8.2",
     "@types/jasmine": "^2.5.53",
     "@types/karma": "^0.13.36",
+    "@types/node": "^8.0.14",
     "@types/quill": "0.0.31",
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
@@ -34,6 +36,7 @@
     "css-loader": "^0.28.2",
     "enzyme": "^2.9.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fs": "0.0.1-security",
     "grunt": "1.0.1",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-contrib-clean": "^1.1.0",
@@ -58,7 +61,9 @@
     "karma-webpack": "^2.0.4",
     "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.1.0.tar.gz",
     "node-sass": "^4.5.3",
+    "node-svn-ultimate": "^1.1.0",
     "nodemon": "^1.11.0",
+    "path": "^0.12.7",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
@@ -69,6 +74,7 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.2.2",
+    "ts-node": "^3.2.1",
     "tslint": "^5.5.0",
     "tslint-eslint-rules": "^4.1.0",
     "typescript": "^2.4.1",
