Update npm test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Rich inline or toolbar text editing",
   "scripts": {
     "pretest": "tsc && npm run lint && grunt release",
-    "test": "karma start --single-run --codeCoverage && node tests/remap.js",
+    "test": "npm run unitTest && npm run updateProject",
+    "unitTest": "karma start --single-run --codeCoverage && node tests/remap.js",
     "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'",
     "build": "grunt release",
     "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
