--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'",
     "build": "grunt release",
     "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
-    "updateProject": "ts-node -P tests/scripts/tsconfig.json tests/scripts/UpdateMxProject.ts",
-    "deployApp": "ts-node -P tests/scripts/tsconfig.json tests/scripts/DeployMxApp.ts"
+    "updateProject": "node ./node_modules/mendix-widget-build-script/dist/UpdateMxProject.js",
+    "deployApp": "node ./node_modules/mendix-widget-build-script/dist/DeployMxApp.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,6 @@
     "url": "https://github.com/mendixlabs/rich-text/issues"
   },
   "devDependencies": {
-    "@types/archiver": "^2.0.0",
     "@types/classnames": "^2.2.0",
     "@types/core-js": "0.9.36",
     "@types/enzyme": "^2.8.2",
@@ -39,7 +38,6 @@
     "css-loader": "^0.28.2",
     "enzyme": "^2.9.1",
     "extract-text-webpack-plugin": "^3.0.0",
-    "fs": "0.0.1-security",
     "grunt": "1.0.1",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-contrib-clean": "^1.1.0",
@@ -63,10 +61,9 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.4",
     "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.1.0.tar.gz",
+    "mendix-widget-build-script": "https://github.com/FlockOfBirds/mendix-widget-build-script/archive/v1.0.0-alpha.tar.gz",
     "node-sass": "^4.5.3",
-    "node-svn-ultimate": "^1.1.0",
     "nodemon": "^1.11.0",
-    "path": "^0.12.7",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
@@ -77,7 +74,6 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.2.2",
-    "ts-node": "^3.2.1",
     "tslint": "^5.5.0",
     "tslint-eslint-rules": "^4.1.0",
     "typescript": "^2.4.1",
