--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "updateProject": "node ./node_modules/mendix-widget-build-script/dist/UpdateMxProject.js",
     "deployApp": "node ./node_modules/mendix-widget-build-script/dist/DeployMxApp.js"
   },
+  "pre-commit": [
+    "pretest",
+    "lint"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/mendixlabs/rich-text"
@@ -27,7 +31,6 @@
     "@types/enzyme": "^2.8.2",
     "@types/jasmine": "^2.5.53",
     "@types/karma": "^0.13.36",
-    "@types/node": "^8.0.14",
     "@types/quill": "0.0.31",
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
@@ -54,7 +57,6 @@
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
-    "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-remap-istanbul": "^0.6.0",
@@ -63,6 +65,7 @@
     "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.1.0.tar.gz",
     "mendix-widget-build-script": "https://github.com/FlockOfBirds/mendix-widget-build-script/archive/v1.0.0-alpha.tar.gz",
     "node-sass": "^4.5.3",
+    "pre-commit": "^1.2.2",
     "nodemon": "^1.11.0",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
