--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "Rich inline or toolbar text editing",
   "scripts": {
     "pretest": "tsc && npm run lint && grunt release",
-    "test": "npm run unitTest && npm run updateProject && npm run deployApp",
+    "test": "npm run unitTest && npm run updateProject && npm run deployApp && npm run e2eTest",
     "unitTest": "karma start --single-run --codeCoverage && node tests/remap.js",
+    "e2eTest": "tsc -p ./tests/e2e/tsconfig.json && wdio ./tests/e2e/wdio.conf.js",
     "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'",
     "build": "grunt release",
     "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
@@ -27,7 +28,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.0",
-    "@types/core-js": "0.9.36",
+    "@types/core-js": "^0.9.42",
     "@types/enzyme": "^2.8.2",
     "@types/jasmine": "^2.5.53",
     "@types/karma": "^0.13.36",
@@ -35,6 +36,7 @@
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
     "@types/sanitize-html": "^1.13.31",
+    "@types/webdriverio": "^4.8.2",
     "check-dependencies": "^1.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
@@ -61,12 +63,13 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.4",
     "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.1.0.tar.gz",
     "mendix-widget-build-script": "https://github.com/FlockOfBirds/mendix-widget-build-script/archive/v1.0.0-alpha.tar.gz",
     "node-sass": "^4.5.3",
-    "pre-commit": "^1.2.2",
     "nodemon": "^1.11.0",
+    "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
@@ -80,6 +83,12 @@
     "tslint": "^5.5.0",
     "tslint-eslint-rules": "^4.1.0",
     "typescript": "^2.4.1",
+    "wdio-browserstack-service": "^0.1.11",
+    "wdio-dot-reporter": "0.0.8",
+    "wdio-jasmine-framework": "^0.3.1",
+    "wdio-selenium-standalone-service": "0.0.9",
+    "wdio-spec-reporter": "^0.1.0",
+    "webdriverio": "^4.8.0",
     "webpack": "^3.2.0",
     "webpack-dev-server": "^2.5.1",
     "webpack-merge": "^4.1.0"
