--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "declaration": false,
     "removeComments": true,
+    "lib": [ "es2015", "dom" ],
     "noLib": false,
     "watch": false,
     "forceConsistentCasingInFileNames": true,
@@ -22,6 +23,7 @@
   },
   "exclude": [
     "dist/",
-    "node_modules/"
+    "node_modules/",
+    "tests/e2e"
   ]
 }
