--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 sudo: required
+dist: trusty
 language: node_js
 node_js:
 - '6'
 before_install:
+- npm i -g npm@5
 - npm install grunt-cli -g
 - export CHROME_BIN=chromium-browser
 - export DISPLAY=:99.0
