--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
     "emit": "tsc",
-    "pretest": "tsc && npm run lint && npm run build",
+    "pretest": "tsc && npm run lint && npm run build:prod",
     "test": "npm run test:unit && npm run deploy && npm run test:e2e",
-    "test:dev" : "karma start",
+    "test:dev": "karma start",
     "test:unit": "karma start --single-run --codeCoverage && node tests/remap.js",
     "test:e2e": "tsc -p ./tests/e2e/tsconfig.json && wdio ./tests/e2e/wdio.conf.js",
     "test:e2e:dev": "tsc -p ./tests/e2e/tsconfig.json && set DEBUG=true&& wdio ./tests/e2e/wdio.conf.js",
     "lint": "tslint -c tslint.json '**/*.ts' --exclude '**/node_modules/**'",
     "lint:fix": "npm run lint -- --fix",
-    "deploy" : " npm run updateProject && npm run deployApp",
+    "deploy": " npm run updateProject && npm run deployApp",
     "build:prod": "grunt release",
     "build:dev": "grunt clean build",
     "updateProject": "node ./node_modules/mendix-widget-build-script/dist/UpdateMxProject.js",
@@ -72,7 +72,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.4",
     "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.1.0.tar.gz",
-    "mendix-widget-build-script": "https://github.com/FlockOfBirds/mendix-widget-build-script/archive/v1.0.0-alpha.tar.gz",
+    "mendix-widget-build-script": "^1.0.0-beta3",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
@@ -89,7 +89,6 @@
     "tslint": "^5.5.0",
     "tslint-eslint-rules": "^4.1.0",
     "typescript": "^2.4.1",
-    "wdio-browserstack-service": "^0.1.11",
     "wdio-dot-reporter": "0.0.8",
     "wdio-jasmine-framework": "^0.3.1",
     "wdio-selenium-standalone-service": "0.0.9",
