--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
     "emit": "tsc",
     "pretest": "tsc && npm run lint && npm run build:prod",
-    "test": "npm run test:unit && npm run deploy && npm run test:e2e",
+    "test": "npm run test:unit && npm run e2eConditional",
+    "e2eConditional": "if-env TRAVIS_PULL_REQUEST && (if-env TRAVIS_PULL_REQUEST_SLUG=TRAVIS_REPO_SLUG && echo test1 || echo notest) || echo test2",
+    "deployAndTest": "npm run deploy && npm run test:e2e",
     "test:dev": "karma start",
     "test:unit": "karma start --single-run --codeCoverage && node tests/remap.js",
     "test:e2e": "tsc -p ./tests/e2e/tsconfig.json && wdio ./tests/e2e/wdio.conf.js",
@@ -46,6 +48,7 @@
     "check-dependencies": "^1.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.2",
     "enzyme": "^2.9.1",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -58,6 +61,7 @@
     "grunt-file-append": "0.0.7",
     "grunt-newer": "^1.3.0",
     "grunt-webpack": "^3.0.2",
+    "if-env": "^1.0.0",
     "istanbul": "^0.4.3",
     "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine": "^2.7.0",
@@ -71,7 +75,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.4",
-    "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.1.0.tar.gz",
+    "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.4.tar.gz",
     "mendix-widget-build-script": "^1.0.0-beta3",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
