--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
     "emit": "tsc",
     "pretest": "tsc && npm run lint && npm run build:prod",
-    "test": "npm run test:unit && npm run e2eConditional",
-    "e2eConditional": "if-env TRAVIS_PULL_REQUEST && (if-env TRAVIS_PULL_REQUEST_SLUG=TRAVIS_REPO_SLUG && echo test1 || echo notest) || echo test2",
+    "test": "npm run test:unit && npm run test:conditional",
+    "test:conditional": "node ./node_modules/mendix-widget-build-script/dist/CheckPullRequestFromFork.js && echo 'Skip tests on forked pull request' || npm run deployAndTest",
     "deployAndTest": "npm run deploy && npm run test:e2e",
     "test:dev": "karma start",
     "test:unit": "karma start --single-run --codeCoverage && node tests/remap.js",
@@ -61,7 +61,6 @@
     "grunt-file-append": "0.0.7",
     "grunt-newer": "^1.3.0",
     "grunt-webpack": "^3.0.2",
-    "if-env": "^1.0.0",
     "istanbul": "^0.4.3",
     "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine": "^2.7.0",
@@ -76,7 +75,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.4",
     "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.4.tar.gz",
-    "mendix-widget-build-script": "^1.0.0-beta3",
+    "mendix-widget-build-script": "^1.0.0-rc2",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
