--- a/package.json
+++ b/package.json
@@ -34,71 +34,75 @@
     "url": "https://github.com/mendixlabs/rich-text/issues"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.3",
-    "@types/core-js": "^0.9.44",
-    "@types/enzyme": "^3.1.6",
-    "@types/jasmine": "^2.8.3",
-    "@types/karma": "^1.7.3",
+    "@types/classnames": "^2.2.6",
+    "@types/core-js": "^2.5.0",
     "@types/quill": "0.0.31",
-    "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3",
+    "@types/dojo": "^1.9.40",
+    "@types/enzyme": "^3.1.14",
     "@types/sanitize-html": "^1.13.31",
-    "@types/webdriverio": "^4.8.7",
+    "@types/jasmine": "^2.8.8",
+    "@types/karma": "^1.7.6",
+    "@types/node": "^10.11.3",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.8",
+    "@types/webdriverio": "^4.10.4",
     "check-dependencies": "^1.1.0",
-    "copy-webpack-plugin": "^4.3.1",
-    "core-js": "^2.5.3",
-    "css-loader": "^0.28.8",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
+    "core-js": "^2.5.7",
+    "css-loader": "^1.0.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "grunt": "^1.0.3",
     "grunt-check-dependencies": "^1.0.0",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-file-append": "0.0.7",
     "grunt-newer": "^1.3.0",
-    "grunt-webpack": "^3.0.2",
-    "istanbul": "^0.4.3",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine": "^2.8.0",
-    "json-loader": "^0.5.4",
-    "karma": "^2.0.0",
+    "grunt-webpack": "^3.1.3",
+    "istanbul": "^0.4.5",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "jasmine": "^3.2.0",
+    "json-loader": "^0.5.7",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage": "^1.1.2",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine3-html-reporter": "^0.2.3",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^2.0.9",
-    "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.13.1.tar.gz",
+    "karma-webpack": "^2.0.4",
+    "mendix-client": "^7.15.1",
     "mendix-widget-build-script": "^1.0.0-rc2",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.14.11",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-test-renderer": "^16.2.0",
-    "remap-istanbul": "^0.9.0",
-    "sass-loader": "^6.0.6",
+    "react": "^16.5.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^16.5.2",
+    "react-test-renderer": "^16.5.2",
+    "remap-istanbul": "^0.12.0",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.1",
-    "style-loader": "^0.19.1",
-    "ts-loader": "^3.2.0",
-    "tslint": "^5.9.1",
-    "tslint-eslint-rules": "^4.1.0",
-    "typescript": "^2.5.3",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "wdio-dot-reporter": "0.0.9",
+    "style-loader": "^0.23.0",
+    "ts-loader": "^5.2.1",
+    "tslint": "^5.2.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "^3.1.1",
+    "wdio-dot-reporter": "0.0.10",
     "wdio-jasmine-framework": "^0.3.2",
-    "wdio-selenium-standalone-service": "0.0.9",
-    "wdio-spec-reporter": "^0.1.1",
-    "webdriverio": "^4.13.1",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.10.1",
-    "webpack-merge": "^4.1.0"
+    "wdio-selenium-standalone-service": "0.0.10",
+    "wdio-spec-reporter": "^0.1.5",
+    "webdriverio": "^4.10.0",
+    "webpack": "^4.20.2",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "classnames": "^2.2.5",
