--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/dojo": "^1.9.40",
     "@types/enzyme": "^3.1.14",
     "@types/sanitize-html": "^1.13.31",
+    "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jasmine": "^2.8.8",
     "@types/karma": "^1.7.6",
     "@types/node": "^10.11.3",
@@ -66,6 +67,7 @@
     "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^3.2.0",
+    "json-source-map": "^0.4.0",
     "json-loader": "^0.5.7",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
